--- a/data/cmep.yaml
+++ b/data/cmep.yaml
@@ -4,8 +4,9 @@
 #
 # This is a computer readable transliteration of the files on Camtools
 # as of Snapshot of 24th May 2013. 
+# Now it's a version with drastic rewriting by Vicky.  But hopefully the original is still there somewhere so I haven't destroyed everything.
 #
-# I'll split it into individual files at some point.
+# I'll split it into individual files at some point. (That was Mike speaking.)
 # 
 ---
 
